# soft-protocol-rust

./: .gitignore  Cargo.toml  Makefile  README.md
rfc/: Makefile
rfc/src/: main.md
soft_cli/: Cargo.toml
soft_cli/src/: client_cli.rs  main.rs  server_cli.rs
soft_client_cli/: Cargo.toml
soft_client_cli/src/: client.rs  main.rs
soft_client_lib/: Cargo.toml
soft_client_lib/src/: client.rs  client_state.rs  data_worker.rs  lib.rs  workers.rs
soft_lib/: Cargo.toml
soft_lib/src/: packet.rs
soft_server/: Cargo.toml
soft_server_async_lib/: Cargo.toml
soft_server_async_lib/src/: checksum_cache.rs  congestion_cache.rs  connection.rs  file_sandbox.rs  lib.rs  send_buffer.rs  server.rs
soft_server_cli/: Cargo.toml
soft_server_cli/src/: main.rs
soft_server_lib/: Cargo.toml
soft_server_lib/src/: checksum_cache.rs  checksum_calculator.rs  checksum_engine.rs  config.rs  congestion_cache.rs  connection.rs  connection_pool.rs  connection_state.rs  data_send_worker.rs  file_io.rs  file_reader.rs  file_sandbox.rs  lib.rs  logger.rs  path_cache.rs  receive_worker.rs  send_buffer.rs  server.rs  server_state.rs  worker.rs
soft_server_lib/src/file_io/: reader.rs
soft_server_lib/src/file_reader/: file_reader.rs
soft_shared_async_lib/: Cargo.toml
soft_shared_async_lib/src/: general.rs  lib.rs
soft_shared_lib/: Cargo.toml
soft_shared_lib/src/: checksum.rs  constants.rs  error.rs  field_types.rs  general.rs  helper.rs  lib.rs  packet.rs  packet_view.rs  sha256_helper.rs  soft_error_code.rs  times.rs  ttl_map.rs
soft_shared_lib/src/general/: byte_view.rs  (+2 more)
(+29 files in other folders)
