[package]
name = "soft_server_async_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
soft_shared_lib = { path = "../soft_shared_lib" }
soft_shared_async_lib = { path = "../soft_shared_async_lib" }
tokio = { version = "1.9.0", features = ["full"] }
log = "0.4.14"
ttl_cache = "0.5.1"
rand = "0.8.4"

[dev-dependencies]
tempdir = "0.3.7"
hex-literal = "0.3.1"
test-case = "1.2.0"
env_logger = "0.9.0"
