[package]
name = "soft_server_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
soft_shared_lib = { path = "../soft_shared_lib" }
atomic = "0.5"
rand = "0.8.4"
sha2 = "0.9.5"
log = "0.4.14"
env_logger = "0.9.0"
linked-hash-map = "0.5"
ttl_cache = "0.5.1"

[dev-dependencies]
tempdir = "0.3.7"
hex-literal = "0.3.1"
test-case = "1.2.0"